# migiude

./: .firebaserc  .gitignore  README.md  capacitor.config.ts  eslint.config.mjs  firebase.json  firestore.indexes.json  firestore.rules  next.config.ts  package-lock.json  package.json
android/: gradle.properties
android/app/: build.gradle  google-services.json
android/app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
assets/: README.md
components/: app-chrome.tsx  app-header.tsx  app-providers.tsx  app-session-gate.tsx  auth-gate.tsx  capacitor-provider.tsx  firebase-provider.tsx  mermaid-diagram.tsx  onboarding-gate.tsx  push-bootstrap.tsx  reminders-bootstrap.tsx  setup-dashboard.tsx  theme-provider.tsx
docs/: ADMIN.md  ANDROID_16KB.md  ANDROID_CRASH_FIX.md  ANDROID_DEBUG_CURSOR.md  ANDROID_JDK.md  ANDROID_MIC_ISOLATION.md  ANDROID_RELEASE.md  ANDROID_SSL.md  AUTH.md  BILLING_ALERTS.md  CAPACITOR.md  CONVERSION.md  EMULATORS.md  FAIR_USE.md  FEATURES.md  GROUPS_AND_TODOS_V1.md  INTEGRATIONS_OTTER_PARITY.md  NETWORK_TROUBLESHOOTING.md  NODE22.md  ON_DEVICE_PHASE_B.md  ON_DEVICE_PHASE_C.md  ON_DEVICE_PHASE_D.md  ON_DEVICE_PHASE_E.md  ON_DEVICE_PHASE_F.md  PHASE0.md  PHASE1.md  PHASE10.md  PHASE11.md  PHASE2.md  PHASE3.md  PHASE4.md  PHASE5.md  PHASE6.md  PHASE7.md  PHASE8.md  PHASE9.md  PHASES.md  PLANS.md  ROADMAP.md  STRIPE.md  (+2 more)
functions/: .gitignore  .secret.local.example  package-lock.json  package.json
hooks/: use-ai-settings.ts  use-app-settings.ts  use-auth-user.ts  use-cloud-transcription.ts  use-friends.ts  use-groups.ts  use-hold-gesture.ts  use-listen-session.ts  use-local-transcription.ts  use-meeting-appends.ts  use-meeting-templates.ts  use-meetings.ts  use-microsoft-integration.ts  use-notes.ts  use-plan-and-usage.ts  use-reminders.ts  use-shared-meetings.ts  use-speech-personalization.ts  use-speech-recognition.ts  use-todos.ts  use-transcription.ts  use-user-support-tickets.ts  use-wake-lock.ts  use-whisper-stt.ts
lib/: clipboard.ts
public/: ads.txt
scripts/: check-node-version.mjs  fix-java-ssl.ps1  set-stripe-secrets.ps1
types/: speech-recognition.d.ts
(+313 files in other folders)
